# ChangeLog for net-im/skype
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.84 2007/11/17 00:08:33 humpback Exp $

  17 Nov 2007; Gustavo Felisberto <humpback@gentoo.org>
  -skype-1.2.0.18.ebuild, -skype-1.2.0.21-r1.ebuild,
  -skype-1.3.0.53-r1.ebuild, -skype-1.4.0.74-r2.ebuild,
  -skype-1.4.0.94.ebuild, -skype-1.4.0.99.ebuild:
  Removing older versions now that 1.4.0.118 is stable.

  15 Nov 2007; Mart Raudsepp <leio@gentoo.org> skype-1.4.0.118.ebuild:
  amd64 stable, bug 198920

  12 Nov 2007; Jurek Bartuszek <jurek@gentoo.org> skype-1.4.0.118.ebuild:
  x86 stable (bug #198920)

*skype-2.0.0.13 (07 Nov 2007)

  07 Nov 2007; Gustavo Felisberto <humpback@gentoo.org>
  +skype-2.0.0.13.ebuild:
  New beta version. Gets packaged masked.

  06 Oct 2007; Gustavo Felisberto <humpback@gentoo.org>
  skype-1.4.0.118.ebuild:
  Fixed missing unpack of libsigc++. Fixes #194910. Thanks to Joël Bohnes for
  reporting and Bernhard Frauendienst for the fix.

*skype-1.4.0.118 (06 Oct 2007)

  06 Oct 2007; Gustavo Felisberto <humpback@gentoo.org>
  +skype-1.4.0.118.ebuild:
  Added 1.4.0.118. The delay was because there is a problem with the upstream
  static version that does not include compiled translations. This was fixed
  by an extra download that i did with the translations.

*skype-1.4.0.99 (19 Aug 2007)

  19 Aug 2007; Gustavo Felisberto <humpback@gentoo.org>
  +skype-1.4.0.99.ebuild:
  Bumped to 1.4.0.99. Closes #189099 .

*skype-1.4.0.94 (01 Aug 2007)

  01 Aug 2007; Gustavo Felisberto <humpback@gentoo.org>
  +skype-1.4.0.94.ebuild:
  Added new upstream release.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> skype-1.2.0.18.ebuild,
  skype-1.2.0.21-r1.ebuild, skype-1.3.0.53-r1.ebuild:
  (QA) RESTRICT clean up.

*skype-1.4.0.74-r2 (21 Jun 2007)

  21 Jun 2007; <humpback@gentoo.org> -skype-1.4.0.74-r1.ebuild,
  +skype-1.4.0.74-r2.ebuild: