@@ -1,6 +1,0 @@
-MD5 ec1c8b5d5d2879909462e90af07a7010 skype-2.0.0.13.tar.bz2 14711357
-RMD160 99a3a7684039cbabd2f4fd87ed5cd1d361a8f4b5 skype-2.0.0.13.tar.bz2 14711357
-SHA256 fcdb3abc14fc730a194125e5856b096ba73d2b4bbb551edccd1a0edf0f14790e skype-2.0.0.13.tar.bz2 14711357
-MD5 5890a138f92aaefdf65275c919864a82 skype_static-2.0.0.13.tar.bz2 21245847
-RMD160 7addb95041b9af97b6ada615a1d53d5861c299a8 skype_static-2.0.0.13.tar.bz2 21245847
-SHA256 a4984d637e3c076ee007122badebf5391c617246de0625478ed1a1db1de6c33c skype_static-2.0.0.13.tar.bz2 21245847
