@@ -1,0 +1,6 @@
+MD5 09fad322644bf46840dfc93bb8040fca skype-2.0.0.27.tar.bz2 14965534
+RMD160 26b88b1b241350d85091e9e965a70823495e0fae skype-2.0.0.27.tar.bz2 14965534
+SHA256 ad9050bd8a511e82e3a1e699622fb9d100386129248b53068501fc9772513b5d skype-2.0.0.27.tar.bz2 14965534
+MD5 7c54c4af668719eb176d1b82d47da73e skype_static-2.0.0.27.tar.bz2 21719656
+RMD160 8512fd20e4096a567c2befa0a697c67b1245cd1e skype_static-2.0.0.27.tar.bz2 21719656
+SHA256 732951b675436c19f91d374028de46116352178af37e6de208da7c04df9f54fe skype_static-2.0.0.27.tar.bz2 21719656
