@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/skype/Attic/skype-2.0.0.13-r1.ebuild,v 1.1 2007/11/12 12:52:03 humpback Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/skype/Attic/skype-2.0.0.27.ebuild,v 1.1 2007/12/05 19:16:56 humpback Exp $
 
 inherit eutils qt4 pax-utils
 
@@ -78,9 +78,13 @@ src_install() {
 
 	insinto /opt/${PN}/lang
 	#
-	#BIG FAT WARNING. REMOVE THE LRELEASE BEFORE PUTTING IN TREE
+	#There have been some issues were lang is not updated from the .ts files
+	#but if we have qt we can rebuild it
 	#
-	#lrelease lang/*.ts
+	if ! use qt-static ; then
+		lrelease lang/*.ts
+	fi
+
 	doins lang/*.qm
 
 	insinto /opt/${PN}/avatars
@@ -98,13 +102,6 @@ src_install() {
 	# insinto /usr/share/applications/
 	# doins skype.desktop
 	make_desktop_entry ${PN} "Skype VoIP" ${PN}.png "Network;InstantMessaging;Telephony"
-
-	# AMD64 team does not provide this so we add it:
-	#if use amd64; then
-	#	exeinto /opt/${PN}
-	#	dosym libsigc-2.0.so.0.0.0 /opt/${PN}/libsigc-2.0.so.0
-	#	doexe "${WORKDIR}"/libsigc-2.0.so.0.0.0
-	#fi
 
 	#Fix for no sound notifications
 	dosym /opt/${PN} /usr/share/${PN}
